# neospace-canvas

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust-analyzer.json  tsconfig.json  vite.config.js
.dependencygraph/: setting.json
garbage/: CanvasManager.ts
graveyard/: Canvas.ts
gravity_effect/: grid.js  shader.txt
src/: index.ts  tree.txt
src/base/: AbstractNode.ts  CSVNode.ts  Canvas.ts  CanvasManager.ts  CanvasNode.ts  EdgeConnectionManager.ts  EdgeInteractionManager.ts  EdgeManager.ts  EdgeRenderer.ts  EdgeToolbar.ts  GridManager.ts  MarkdownNode.ts  Node.ts  NodeStore.ts  ToolbarManager.ts  Viewport.ts  WebGLGridManager.ts
src/styles/: canvas.css  csv.css  edge.css  markdown.css  toolbar.css
src/types/: canvas.ts  edge-types.ts  types.ts  viewport.ts
src/utils/: csvParser.ts
wasm/: Cargo.toml
wasm/tabular_analysis/: Cargo.toml  README.md  test.sh
wasm/tabular_analysis/.github/workflows/: tests.yml
wasm/tabular_analysis/src/: csv.rs  lib.rs  old_lib.rs  refactor_types.txt  types.rs
wasm/tabular_analysis/src/parallel/: executor.rs  mod.rs
wasm/tabular_analysis/src/types/: categorical.rs  currency.rs  date.rs  datetime.rs  email.rs  mod.rs  numeric.rs  phone.rs  type_scoring.rs
