[package]
name = "tabular_analysis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
statrs = "0.16"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.4"