[package]
name = "tabular_analysis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
statrs = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.49"
once_cell = "1.20.2"
getrandom = { version = "0.2", features = ["js"] }
rayon = "1.7"
cfg-if = "1.0"
web-sys = { version = "0.3.76", features = [
    "console",
    "Window",
    "Navigator",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
] }
js-sys = "0.3"
wasm-bindgen-rayon = { version = "1.0", optional = true }
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["wasm-bindgen-rayon"]
